--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 html,
 body {
+  position:relative;
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  z-index:1;
+  
 }
 
 #particle-canvas {
   width: 100%;
   height: 100%;
   z-index:-1;
+  position:absolute
 }
