--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html {
 #container-fluid, body {
   position: relative;
 
-
 }
 
 #overlay {
@@ -37,4 +36,16 @@ h1, i {
   font-family: 'Bungee Shade', cursive;
   color: white;
   font-size: 60px;
+}
+
+#footer {
+  position : fixed;
+  bottom : 0;
+  height : 40px;
+  margin-top : 40px;
+  text-align: center;
+  width: 100%;
+  color: white;
+  font-family: Bungee;
+
 }
