--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
-html {
+
+#container-fluid {
+  position: relative;
+  z-index: 0;
 
 }
 
-#container-fluid, body {
-  position: relative;
+body {
+  background-attachment: fixed;
+  background-image: url("assets/milkyway.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 
 }
 
@@ -11,6 +18,7 @@ html {
   position: relative;
   height: 100%;
   width: 100%;
+  background-color: transparent;
 
 }
 
@@ -18,6 +26,7 @@ canvas {
   overflow: auto;
   position: absolute;
   z-index: -1;
+
 }
 
 .content {
@@ -38,14 +47,15 @@ h1, i {
   font-size: 60px;
 }
 
-#footer {
-  position : fixed;
-  bottom : 0;
-  height : 40px;
-  margin-top : 40px;
-  text-align: center;
-  width: 100%;
+h2{
+  font-family: 'Bungee Shade', cursive;
   color: white;
-  font-family: Bungee;
+  font-size: 32px;  }
+#title{
+  text-align: center;
+  margin-top: 50px;
+}
 
+#nav {
+  background-color: transparent;
 }
