--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   background-attachment: fixed;
-  background-image: url("assets/milkyway.jpg");
+  background-image: url("/assets/milkyway.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
