--- a/assets/style.css
+++ b/assets/style.css
@@ -41,7 +41,7 @@ a,p {
 h1{    font-size: 45px;
     font-family: "Shree Devanagari 714";
     color: black;
-    font-weight: 600;
+
 
 }
 
@@ -59,14 +59,12 @@ h1{    font-size: 45px;
 
 #container2 {
     width: 100%;
-    height: 500px;
+    height: auto;
     background-attachment: fixed;
-    background-color: #f7f7f9;
+    background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    margin-left: 20px;
-    margin-right: 20px;
 
 }
 
@@ -168,6 +166,10 @@ width: 50%!important;
 
 .portfolio-link {
     font-size: 25px;
+}
+#aboutMe{
+
+
 }
 
 
