--- a/assets/style.css
+++ b/assets/style.css
@@ -13,8 +13,6 @@ canvas {
     background-color: transparent;
     width: 100%;
     height: 400px;
-    margin-left: 20px;
-    margin-right: 20px;
 
 }
 
@@ -31,20 +29,19 @@ canvas {
 
 }
 
-a,p {
+a, p {
     font-size: 16px;
     font-family: "Shree Devanagari 714";
     color: black;
 
 }
 
-h1{    font-size: 45px;
+h1 {
+    font-size: 45px;
     font-family: "Shree Devanagari 714";
     color: black;
 
-
 }
-
 
 #container1 {
     background-attachment: fixed;
@@ -149,7 +146,7 @@ h1{    font-size: 45px;
 }
 
 .modal-body {
-width: 50%!important;
+    width: 50% !important;
 }
 
 .modal-content {
@@ -167,10 +164,67 @@ width: 50%!important;
 .portfolio-link {
     font-size: 25px;
 }
-#aboutMe{
+
+#aboutMe {
+    text-align: justify;
+    padding-top: 25px;
+    padding-left: 50px;
+
+}
+@media screen and (min-width: 990px) {
+
+    .headshot {
+
+
+    }
 
 
 }
+
+@media screen and (max-width: 991px) {
+
+    .headshot {
+        padding-left: 45%;
+
+    }
+
+    #aboutMe {
+        padding-left: 25%;
+        padding-right: 25%;
+        height: auto;
+
+    }
+}
+
+.hvr-bounce-in {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+
+.hvr-bounce-in:hover, .hvr-bounce-in:focus, .hvr-bounce-in:active {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+}
+
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(/assets/loading.gif) center no-repeat #fff;
+}
+
 
 
 
