--- a/assets/style.css
+++ b/assets/style.css
@@ -171,13 +171,14 @@ h1 {
     padding-left: 50px;
 
 }
+
 @media screen and (min-width: 990px) {
 
     .headshot {
-
-
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
     }
-
 
 }
 
@@ -194,6 +195,16 @@ h1 {
         height: auto;
 
     }
+}
+
+.center-block {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.text-center {
+    text-align: center
 }
 
 .hvr-bounce-in {
@@ -213,8 +224,17 @@ h1 {
     transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
 }
 
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.no-js #loader {
+    display: none;
+}
+
+.js #loader {
+    display: block;
+    position: absolute;
+    left: 100px;
+    top: 0;
+}
+
 .se-pre-con {
     position: fixed;
     left: 0px;
