--- a/assets/style.css
+++ b/assets/style.css
@@ -130,7 +130,7 @@ h1 {
 
 #inner {
     width: 50%;
-    margin: 0 auto;
+    padding: 0 auto;
     background-image: url("name.jpeg");
     background-size: 100%;
     background-repeat: no-repeat;
@@ -141,7 +141,7 @@ h1 {
 #footer {
     display: table;
     text-align: center;
-    margin: auto;
+    padding: auto;
     width: 100%;
 }
 
@@ -168,40 +168,16 @@ h1 {
 #aboutMe {
     text-align: justify;
     padding-top: 25px;
-    padding-left: 50px;
 
-}
-
-@media screen and (min-width: 990px) {
-
-    .headshot {
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-
-}
-
-@media screen and (max-width: 991px) {
-
-    .headshot {
-        padding-left: 45%;
-
-    }
-
-    #aboutMe {
-        padding-left: 25%;
-        padding-right: 25%;
-        height: auto;
-
-    }
 }
 
 .center-block {
     margin-left: auto;
     margin-right: auto;
     display: block;
+
 }
+
 
 .text-center {
     text-align: center
