--- a/assets/style.css
+++ b/assets/style.css
@@ -178,7 +178,6 @@ h1 {
 
 }
 
-
 .text-center {
     text-align: center
 }
@@ -221,6 +220,15 @@ h1 {
     background: url(/assets/loading.gif) center no-repeat #fff;
 }
 
+@media (min-width: 768px) {
+    .col-md-4 {
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 0 33.333333%;
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 33.333333%;
+        max-width: 0%;
+    }
+}
 
 
 
