--- a/assets/style.css
+++ b/assets/style.css
@@ -98,9 +98,8 @@ h1 {
 
 #container4 {
     width: 100%;
-    height: 500px;
     background-attachment: fixed;
-    background-color: #f7f7f9;
+    background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
